# reservatron

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: style-checks.yaml  test-coverage.yaml
src/reservatron/: __init__.py  cli.py  paths.py  timeutils.py
src/reservatron/channels/: __init__.py  bohemios.py
tests/: test_dummy.py
